# URANTiOS

./: .gitignore  APPS_AGENTS_CATALOG.md  CLAUDE.md  COMM_UNITY_ROADMAP.md  FASTINO_RESEARCH_BRIEF.md  FOREWORD_ARCHITECTURE_DIAGRAMS.md  FOREWORD_CONTINUITY_ANALYSIS.md  FOREWORD_DEEP_ANALYSIS.md  FOREWORD_ONTOLOGY_MAP.md  FOREWORD_SEMANTIC_ROOTS.md  META_PROMPT_URANTIOS.md  README.md  TASKS.md  generate_faith_of_jesus.py  kdp-command-center.html  pyproject.toml
.github/workflows/: daily-book-publish.yml
artifacts/books/: the-faith-of-jesus.json
bookwriter/: README.md  __init__.py  __main__.py  cli.py  config.py  corpus.py  daily.py  daily_themes.json  llm.py  notify.py  obsidian.py  outline.py  themes.py  vault.py  writer.py
bookwriter/prompts/: __init__.py  templates.py
bookwriter/tests/: test_corpus.py
examples/: write_book.py
nemoclaw/: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.sh  docker-compose.yml
nemoclaw/docs/: ARCHITECTURE.md  SECURITY.md  WORKFLOW_MODEL.md
nemoclaw/manifests/: bootstrap_manifest.json
nemoclaw/n8n/: README.md
nemoclaw/nemo-core/: README.md
nemoclaw/obsidian/: README.md
nemoclaw/postgres/: README.md
nemoclaw/redis/: README.md
nemoclaw/scripts/: README.md
obsidian/: Foreword — Definitions Map.md  URANTiOS — Home.md
pipeline/: NEMOCLAW_OBSERVER.md  build_digital_equivalence.py  build_obsidian_vault.py  build_urantipedia.py  cognee_bootstrap.py  daily-publish.sh  fireclaw.md  generate-artifact.py  runner-v2.sh  weekly_drop.py
setup/: openclaw_server.sh
soul/: URANTiOS_meta_prompt.md  URANTiOS_v2.md
(+461 files in other folders)
